# b1sl-python

./: .env.example  .gitignore  LICENSE  Makefile  README.md  ROADMAP.md  agents.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
configs/: dev.json  qa.json.example
docs/: 01-architecture.md  02-compatibility.md  03-configuration.md  04-async-client.md  05-interaction-patterns.md  06-metadata-generation.md  07-overrides-and-udfs.md  08-logging-and-observability.md  09-contributing.md  10-odata-query-builder.md  11-error-handling.md  12-crud-operations.md  13-batching.md  14-pagination-streams.md
examples/: 01_minimal_client.py  03_async_client.py  04_fluent_queries.py  05_dry_run_safety.py  07_etag_concurrency.py  08_dynamic_resources.py  11_service_calls.py  12_document_lines.py  13_status_resolution.py  14_robust_error_handling.py  15_sync_crud.py  16_async_crud.py  17_dynamic_udfs.py  18_udf_schema.py  19_batch_requests.py  20_pagination_streams.py  21_schema_header.py  __init__.py  async_dynamic_resources.py  async_item.py  business_partner.py  django_integration.py  document.py  dry_run_safety.py  environment_management.py  etag_concurrency.py  fastapi_integration.py  item.py  observability.py  service_call.py  service_call_status.py  utils.py
metadata/1.27/: metadata_document.xml  reference_cache.json  service_document.json  service_layer_api_reference.html
scratch/: investigate_enum.py
scripts/: generate_models.sh
scripts/b1sl_metadata_generator/: __init__.py  generator.py  mapper.py  parser.py  reference_parser.py  resolver.py
skills/: SKILL.md
src/b1sl/: __init__.py
src/b1sl/b1sl/: __init__.py  _types.py  adapter.py  adapter_protocol.py  async_client.py  async_rest_adapter.py  base_adapter.py  client.py  config.py  config_manager.py  environment.py  logging_utils.py  pagination.py  rest_adapter.py  testing.py
src/b1sl/b1sl/batch/: __init__.py  _recording_adapter.py  changeset.py  client.py  parser.py  results.py  serializer.py
src/b1sl/b1sl/contrib/: __init__.py
src/b1sl/b1sl/entities/: __init__.py
src/b1sl/b1sl/exceptions/: __init__.py  (+1 more)
src/b1sl/saphdb/: __init__.py  adapter.py  client.py  config.py  main.py  odbc_adapter.py
tests/: conftest.py  test_async_adapter.py  test_b1sl_adapter.py  test_middleware.py  test_saphdb_adapter.py
tests/fakes/: fake_rest_adapter.py
tests/fixtures/: test_data.py
tests/fixtures/mock_responses/: items_list.json  items_single.json
tests/integration/: conftest.py  test_items_real.py
tests/unit/: test_advanced_features.py  test_batch.py  test_bool_serialisation.py  test_dry_run.py  test_items_mock.py  test_model_resolution.py  test_odata_builder.py  test_pagination.py  test_rest_adapter.py  test_schema_header.py  test_service_calls.py  test_stream_execution.py  test_udfs.py
tests/unit/mocks/: items_list.json  items_single.json
(+548 files in other folders)
